Mon Jan 12 22:27:10 2009  Arnold D. Robbins  <arnold@skeeve.com>

	Bi-annual sync with GLIBC.

	* regexec.c, regex.h, regex_internal.c, regcomp.c, regex_internal.h,
	regex.c: Reapply any portability patches specific to gawk.
	* getopt.c: Sync with GLIBC.

	Base versions:
		getopt.c		1.57	Thu Jan  8 20:02:05 2009		
		getopt.h		1.21	Fri Mar 19 00:19:32 2004		
		getopt1.c		1.10	Tue Mar  9 10:35:37 2004		
		getopt_int.h		1.1	Tue Mar  9 10:31:19 2004		
		regex.c			1.129	Tue Sep  6 20:49:44 2005		
		regexec.c		1.99	Thu Jan  8 20:02:06 2009		
		regexec.c		1.99	Thu Jan  8 20:02:06 2009		
		regex.h			1.43	Wed Jan 16 10:09:47 2008		
		regex_internal.c	1.69	Thu Jan  8 20:02:06 2009		
		regex_internal.h	1.76	Thu Jan  8 20:02:06 2009		
		regcomp.c		1.120	Thu Jan  8 20:02:06 2009		

Mon Jan  5 23:07:58 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (devopen): Add a retry to calls to socketopen. Tunable
	via undocumented GAWK_SOCK_RETRIES environment variable. Based
	on code from Juergen Kahrs <Juergen.Kahrs@vr-web.de> after a
	suggestion from Hermann Peifer <peifer@gmx.eu>.

Mon Jan  5 22:48:39 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (redirect): A getline from a directory is no longer
	fatal; instead it returns -1. Thanks to Paolo <oopla@users.sf.net>
	for the report.

Mon Dec 29 22:04:57 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (format_tree): Case for 's', improve logic for setting
	the number of characters to copy, also at pr_tail. Based on
	bug report by Hermann Peifer <peifer@gmx.net>.

Thu Dec 11 21:23:50 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (do_length): If the wide string has zero length
	but the bytes are more than zero, use the number of bytes.
	(do_index): Similar also: fall back to byte count if the
	bytes don't make a wide-character string.
	Bug reported by "Carlos G." <charlie.brown.uy@gmail.com>

	(do_substr): If defaulting to length of rest of the string,