@@ -1,3 +1,8 @@
+Tue Jan 13 09:23:40 2009  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* regex.c, regex_internal.h: Remove some changes that are no
+	longer needed after sync with GLIBC.
+
 Mon Jan 12 22:27:10 2009  Arnold D. Robbins  <arnold@skeeve.com>
 
 	Bi-annual sync with GLIBC.
